fix(a11y): increase discount text contrast for readability

--- a/src/style/components/_product-card.scss
+++ b/src/style/components/_product-card.scss
@@ -41,10 +41,10 @@
   }
 
   &__discount {
-    background-color: variables.$purple-medium;
+    background-color: #47324b;
 
     span {
-      color: variables.$purple-light;
+      color: #000000;
     }
 
   }
